2006-02-05  Neil Williams <linux@codehelp.co.uk>

	* qof/gnc-numeric.c : Derek's fixes for reciprocal
	numeric handling. Derek Atkins <warlord@mit.edu>
	* qof/test/test-numeric.c : Derek's test for the
	fixed reciprocal handling. Derek Atkins <warlord@mit.edu>

2006-02-01  Neil Williams <linux@codehelp.co.uk>

	* qof/test/Makefile.am :
	* qof/test/test-book-merge.c : adding some 
	randomness to the test
	* qof/test/test-recursive.c : New test to 
	identify and then fix problems in 
	qof_entity_copy_coll_r

2006-01-23  Neil Williams <linux@codehelp.co.uk>

	* qof/qof_book_merge.h : Use gchar consistently
	instead of mixing with char.
	* qof/qof_book_merge.c : Fix merge handling of
	QOF_TYPE_CHAR to use gchar instead of casting
	from a gchar*
	* qof/test/test-book-merge.c : Add test case 
	to make sure QOF_TYPE_CHAR handling is working.

2006-01-22  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c : Prevent bad time
	values from being passed to entity.
	* qof/gnc-engine-util.c|h : Add CACHE_REPLACE(dst, src)
	macro for common case in string setters.
	Chris Shoemaker <chris@cvs.gnucash.org>
	gnucash r12319.
	* website/index.html : Update for new package
	locations.
	* po/sv.po : New Swedish translation.
	* po/vi.po : New Vietnamese translation.
	* configure.in : Support new translations.

2006-01-08  Neil Williams <linux@codehelp.co.uk>

	* qof/qofid.c : Fix logical bug that prevented collection
	data being set.
	* qof/gnc-numeric.c : gnucash sync.

2006-01-03  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : Add HACKING to dist.
	* backend/file/pilot-qsf-GnuCashInvoice.xml :
	update objects - the file may still be removed in a 
	future release.
	* backend/file/qsf-backend.c : remove uneven 
	debug call
	* backend/file/qsf-xml-map.c : improve debug handling
	* fink/qof1.info : Update library SONAMES for packaging.
	* qof/qofbackend.c : 
	* qof/qof.h : Finalise module loading. Downgrade the reliance
	on the .la files for backends.